--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 byteorder = "1.5.0"
 prost = "0.13.5"
 prost-build = "0.13.5"
+regex = "1.11.1"
 uuid = { version = "1.16.0", features = ["v4"] }
 
 [build-dependencies]
